Archive2/14/f42290ddb53cb8/output
main.cpp:23:9: error: static_assert failed "wrong number of arguments"
        static_assert(sizeof...(args) == N, "wrong number of arguments");
        ^             ~~~~~~~~~~~~~~~~~~~~
main.cpp:51:7: note: in instantiation of function template specialization 'strict_binder<std::_Bind<void (*(std::_Placeholder<1>, int))(int, int)>, 1>::operator()<int, int>' requested here
    f0(1, 2);
      ^
1 error generated.
